--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.16.0",
+    "@types/express-graphql": "^0.6.1",
     "@types/graphql": "^14.0.0",
     "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
     "graphql": "^14.0.2"
   },
   "devDependencies": {
