--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,19 @@
     "@types/graphql": "^14.0.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "reflect-metadata": "^0.1.12",
+    "type-graphql": "^0.14.0",
+    "typescript": "^3.0.3"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "ts-node": "^7.0.1"
   },
   "scripts": {
     "dev": "nodemon dist/index.js",
-    "build": "rm -fr dist && tsc --outDir dist src/*",
+    "dev-ts-node": "nodemon --config _nodemon.json",
+    "build": "rm -fr dist && tsc",
     "build-watch": "yarn build -w"
   }
 }
