--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,12 @@
 {
     "compilerOptions": {
+        "target": "es2016",
+        "module": "commonjs",
         "outDir": "./dist/",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
         "lib": [
-            "esnext",
+            "es2016",
             "esnext.asynciterable"
         ]
     },
