--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,10 @@
     "@types/graphql": "^14.0.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "graphql": "^14.0.2",
+    "graphql": "0.13.2",
     "reflect-metadata": "^0.1.12",
     "type-graphql": "^0.14.0",
+    "types": "^0.1.1",
     "typescript": "^3.0.3"
   },
   "devDependencies": {
