--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,15 @@
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
-    "@types/graphql": "^14.0.0",
+    "@types/graphql": "0.13.4",
+    "@types/node": "^10.9.4",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "0.13.2",
+    "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
     "type-graphql": "^0.14.0",
+    "typeorm": "^0.2.7",
     "types": "^0.1.1",
     "typescript": "^3.0.3"
   },
