adding typeorm entity

--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -3,18 +3,18 @@
     "host": "localhost",
     "port": 5432,
     "database": "wudo",
-    "username": "hello",
-    "password": "world",
+    "username": "postgres",
+    "password": "postgres",
     "schemaName": "public",
     "synchronize": true,
     "logging": false,
     "entities": [
-        "src/entity/**/*.ts"
+        "dist/entity/**/*.js"
     ],
     "migrations": [
-        "src/migration/**/*.ts"
+        "dist/migration/**/*.js"
     ],
     "subscribers": [
-        "src/subscriber/**/*.ts"
+        "dist/subscriber/**/*.js"
     ]
 }
