--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -2,7 +2,7 @@
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
-    "database": "wudo",
+    "database": "postgres",
     "username": "postgres",
     "password": "postgres",
     "schemaName": "public",
