--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,7 @@
     "apollo-boost": "^0.1.16",
     "color-hash": "^1.0.3",
     "graphql": "^14.0.2",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
