--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,7 +14,8 @@
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "url-regex": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
