--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express-graphql": "^0.6.12",
     "graphql": "0.13.2",
     "lodash": "^4.17.11",
+    "open-graph-scraper": "^3.5.1",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
     "type-graphql": "^0.14.0",
