--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,6 +10,7 @@
     "color-hash": "^1.0.3",
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
+    "material-ui-chip-input": "^1.0.0-beta.7",
     "moment": "^2.22.2",
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
