--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "dev-ts-node": "nodemon --config _nodemon.json",
     "build": "rm -fr dist && tsc",
     "build-watch": "yarn build -w",
-    "fix-package": "rm -rf node_modules/@types/graphql && cp -r node_modules/@types/express-graphql/node_modules/@types/graphql node_modules/@types/."
+    "fix-package": "rm -rf node_modules/@types/graphql && cp -r node_modules/@types/express-graphql/node_modules/@types/graphql node_modules/@types/.",
+    "fix-watch": "sudo sysctl fs.inotify.max_user_watches=524288"
   }
 }
