--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,18 @@
     "@types/graphql": "0.13.4",
     "@types/lodash": "^4.14.116",
     "@types/node": "^10.9.4",
+    "@types/node-fetch": "^2.1.2",
+    "@types/sharp": "^0.17.10",
+    "crypto": "^1.0.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "0.13.2",
     "lodash": "^4.17.11",
+    "node-fetch": "^2.2.0",
     "open-graph-scraper": "^3.5.1",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
+    "sharp": "^0.20.8",
     "type-graphql": "^0.14.0",
     "typeorm": "^0.2.7",
     "types": "^0.1.1",
