--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
     "@types/graphql": "0.13.4",
+    "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
+    "@types/mz": "^0.0.32",
     "@types/node": "^10.9.4",
     "@types/node-fetch": "^2.1.2",
     "@types/sharp": "^0.17.10",
@@ -15,7 +17,9 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "0.13.2",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "mz": "^2.7.0",
     "node-fetch": "^2.2.0",
     "open-graph-scraper": "^3.5.1",
     "pg": "^7.4.3",
