--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
+    "@types/express-jwt": "^0.0.40",
     "@types/graphql": "0.13.4",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
@@ -16,6 +17,7 @@
     "crypto": "^1.0.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
+    "express-jwt": "^5.3.1",
     "graphql": "0.13.2",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
