--- a/react-app/package.json
+++ b/react-app/package.json
@@ -16,6 +16,7 @@
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
     "react-google-login": "^3.2.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "url-regex": "^4.1.1"
   },
