--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
     "@types/express-jwt": "^0.0.40",
-    "@types/graphql": "0.13.4",
+    "@types/graphql": "^0.13.4",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/mz": "^0.0.32",
