--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "pluralize": "^7.0.0",
     "react": "^16.5.1",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
