use react adopt

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.22.2",
     "pluralize": "^7.0.0",
     "react": "^16.5.1",
+    "react-adopt": "^0.6.0",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.1",
     "react-google-login": "^3.2.1",
