--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -2,12 +2,12 @@
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
-    "database": "postgres",
+    "database": "dataloader",
     "username": "postgres",
     "password": "postgres",
     "schemaName": "public",
     "synchronize": true,
-    "logging": false,
+    "logging": true,
     "entities": [
         "dist/entity/**/*.js"
     ],
