--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/node-fetch": "^2.1.2",
     "@types/sharp": "^0.17.10",
     "crypto": "^1.0.1",
+    "dataloader": "^1.4.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-jwt": "^5.3.1",
