--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/compression": "^0.0.36",
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
     "@types/express-jwt": "^0.0.40",
@@ -14,6 +15,7 @@
     "@types/node": "^10.9.4",
     "@types/node-fetch": "^2.1.2",
     "@types/sharp": "^0.17.10",
+    "compression": "^1.7.3",
     "crypto": "^1.0.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
