--- a/react-app/package.json
+++ b/react-app/package.json
@@ -16,6 +16,7 @@
     "react": "^16.5.1",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.1.11",
+    "react-apollo-compose": "^0.1.4",
     "react-dom": "^16.5.1",
     "react-google-login": "^3.2.1",
     "react-linkify": "^0.2.2",
