--- a/react-app/public/manifest.json
+++ b/react-app/public/manifest.json
@@ -5,7 +5,7 @@
     {
       "src": "icon.png",
       "sizes": "32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     }
   ],
   "start_url": "./index.html",
