--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/compression": "^0.0.36",
+    "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
     "@types/express-jwt": "^0.0.40",
@@ -16,6 +17,7 @@
     "@types/node-fetch": "^2.1.2",
     "@types/sharp": "^0.17.10",
     "compression": "^1.7.3",
+    "cookie-parser": "^1.4.3",
     "crypto": "^1.0.1",
     "dataloader": "^1.4.0",
     "express": "^4.16.3",
