--- a/react-app/public/manifest.json
+++ b/react-app/public/manifest.json
@@ -3,8 +3,28 @@
   "name": "What the f*** you do",
   "icons": [
     {
-      "src": "icon.png",
-      "sizes": "32x32 24x24 16x16",
+      "src": "icon16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "icon24.png",
+      "sizes": "24x24",
+      "type": "image/png"
+    },
+    {
+      "src": "icon32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "icon64.png",
+      "sizes": "64x64",
+      "type": "image/png"
+    },
+    {
+      "src": "icon192.png",
+      "sizes": "192x192",
       "type": "image/png"
     }
   ],
