--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,7 @@
     "apollo-boost": "^0.1.16",
     "classnames": "^2.2.6",
     "color-hash": "^1.0.3",
+    "events": "^3.0.0",
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
