--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/compression": "^0.0.36",
     "@types/cookie-parser": "^1.4.1",
+    "@types/elasticsearch": "^5.0.28",
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.1",
     "@types/express-jwt": "^0.0.40",
@@ -20,6 +21,7 @@
     "cookie-parser": "^1.4.3",
     "crypto": "^1.0.1",
     "dataloader": "^1.4.0",
+    "elasticsearch": "^15.1.1",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-jwt": "^5.3.1",
@@ -47,6 +49,7 @@
     "dev-ts-node": "nodemon --config _nodemon.json",
     "build": "rm -fr dist && tsc",
     "build-watch": "yarn build -w",
+    "index-users": "node dist/bin/indexUser.js",
     "generate-private-key": "openssl rand -base64 512 > private.key",
     "fix-package": "rm -rf node_modules/@types/graphql && cp -r node_modules/@types/express-graphql/node_modules/@types/graphql node_modules/@types/.",
     "fix-watch": "sudo sysctl fs.inotify.max_user_watches=524288"
